Implement AuthN and AuthZ feature.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,10 @@
 spring:
   profiles:
-    active: hsql
+    active: mysql
+  security:
+    user:
+      name: nam
+      password: nam
+      roles: manager
+server:
+  port: 9999
