--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -1,5 +1,5 @@
 spring:
-  jpa.hibernate.ddl-auto: update
+#  jpa.hibernate.ddl-auto: create
   datasource:
     url: jdbc:mysql://localhost:3306/hotel_management
     username: root
