--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -4,3 +4,5 @@ spring:
     url: jdbc:mysql://localhost:3306/hotel_management
     username: root
     password: quocnamle
+  jpa:
+    generate-ddl: true
