--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -1,8 +1,8 @@
 spring:
-  jpa.hibernate.ddl-auto: create-drop
+  #jpa.hibernate.ddl-auto: create
   datasource:
-    url: jdbc:mysql://localhost:3306/hotel_management
+    url: jdbc:mysql://localhost:3306/hotel_management?serverTimezone=UTC
     username: root
-    password: quocnamle
+    password: miu123cB@
   jpa:
     generate-ddl: true
