--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -6,6 +6,10 @@ spring:
     password: quocnamle
   jpa:
     generate-ddl: true
+    show-sql: true
+  #    properties:
+  #      hibernate:
+  #        format-sql: true
 
   # Templates reloading during development
   thymeleaf:
