--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 spring:
   profiles:
-    active: postgres
-
+    active: heroku
+  jpa:
+    generate-ddl: true
+    show-sql: true
 server.error.whitelabel.enabled: false
